--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
-  margin: 0;
-  padding: 0;
+  background-color: rgb(40,40,40);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,4 +10,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+body{
+  margin: 0%;
+  background: url('../public/curtain4.jpg');
+  height:100%;
+  width:100%;
 }
